infrastructures/k8s/manifests/istio/security/peer-authentication-mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: peer-authentication-mtls-backend
  namespace: staging
spec:
  selector:
    matchLabels:
      app-type: backend
  mtls:
    mode: STRICT
